--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
